# CMakeList.txt : CMake project for Server, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (Server "Server.cpp" "Server.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Server PROPERTY CXX_STANDARD 17)
endif()

# TODO: Add tests and install targets if needed.
